<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/src_margin"
                android:layout_marginRight="@dimen/src_margin"
                android:layout_marginTop="@dimen/src_margin"
                android:background="@drawable/border"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sendEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sendEmail"
                        android:imeActionId="6"
                        android:imeActionLabel="Send Email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sendServer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sendServer"
                        android:imeActionId="6"
                        android:imeActionLabel="send Server Adress"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/toEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/toEmail"
                        android:imeActionId="6"
                        android:imeActionLabel="to email adress"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionId="6"
                        android:imeActionLabel="send email password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/src_margin"
                    android:layout_marginLeft="@dimen/src_margin"
                    android:layout_marginRight="@dimen/src_margin"
                    android:background="@color/colorAccent"
                    android:text="@string/test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/src_margin"
                android:layout_marginRight="@dimen/src_margin"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/maxRetry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/maxRetry"
                        android:imeActionId="6"
                        android:imeActionLabel="Send Email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/retryTimeInterval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retryTimeInterval"
                        android:imeActionId="6"
                        android:imeActionLabel="send Server Adress"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/maxCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/maxCount"
                        android:imeActionId="6"
                        android:imeActionLabel="max count of sms"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/merger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/src_margin"
                    android:layout_marginStart="@dimen/src_margin"
                    android:layout_marginEnd="@dimen/src_margin"
                    android:checked="false"
                    android:hint="@string/merger"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/src_margin"
                android:layout_marginRight="@dimen/src_margin"
                android:layout_marginTop="@dimen/src_margin"
                android:background="@color/colorAccent"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

